examples/test/testpolicy14459.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14459
  namespace: namespace327
spec:
  podSelector:
    matchLabels:
      key30: value37
      key23: value1
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key44: value14
          key6: value48
      podSelector:
        matchLabels:
          key31: value0
          key28: value8
